--- a/index.html
+++ b/index.html
@@ -80,11 +80,9 @@
       margin: 30px 0;
     }
 
-    /* Politician Cards */
+    /* Politician Card */
     .politician-container {
       display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
       justify-content: center;
       margin-top: 20px;
     }
@@ -160,22 +158,14 @@
 
     <hr>
 
-    <h3>Featured Politicians</h3>
+    <h3>Featured Politician</h3>
     <div class="politician-container">
-      <!-- Politician 1 -->
+      <!-- Politician Card -->
       <div class="politician-card">
-        <img src="images/politician1.jpg" alt="Politician 1">
-        <h4>John Doe</h4>
+        <img src="images/jevan-chakankar.jpg" alt="Jevan Chakankar">
+        <h4>Jevan Chakankar</h4>
         <p>Constituency: Pune Central</p>
-        <p>Member of XYZ Party. Focused on social development and education campaigns.</p>
-      </div>
-
-      <!-- Politician 2 -->
-      <div class="politician-card">
-        <img src="images/politician2.jpg" alt="Politician 2">
-        <h4>Jane Smith</h4>
-        <p>Constituency: Pune West</p>
-        <p>Leader in environmental initiatives and community development programs.</p>
+        <p>Dedicated to community development, youth engagement, and social welfare initiatives.</p>
       </div>
     </div>
   </main>
