--- a/index.html
+++ b/index.html
@@ -2,178 +2,215 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>G-Mediatech | Digital Media & Political Communication</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- CSS Styles -->
   <style>
-    /* Global Styles */
     body {
-      font-family: 'Arial', sans-serif;
       margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      background-color: #f4f4f9; /* Light background */
-      color: #333;
+      font-family: "Segoe UI", Arial, sans-serif;
+      background: #f4f6f9;
+      color: #111;
     }
 
-    a {
-      text-decoration: none;
-      color: #fff;
-    }
-
-    /* Header / Banner */
+    /* HEADER */
     header {
-      background: linear-gradient(90deg, #0066cc, #00ccff); /* Gradient banner */
-      color: white;
-      padding: 40px 0;
+      background: #0a2540;
+      color: #fff;
+      padding: 60px 20px;
       text-align: center;
     }
 
     header h1 {
-      margin: 0;
-      font-size: 2.5em;
+      font-size: 46px;
+      font-weight: 900;
       letter-spacing: 1px;
+      margin-bottom: 10px;
     }
 
     header h2 {
-      margin: 10px 0 0 0;
-      font-weight: 400;
-      font-size: 1.2em;
+      font-size: 20px;
+      font-weight: 600;
+      opacity: 0.9;
     }
 
-    /* Navigation Bar */
+    /* NAV */
     nav {
-      background-color: #333;
+      background: #fff;
+      padding: 15px;
       text-align: center;
-      padding: 10px 0;
+      box-shadow: 0 5px 12px rgba(0,0,0,0.1);
     }
 
     nav a {
       margin: 0 15px;
-      color: white;
-      font-weight: bold;
+      text-decoration: none;
+      font-weight: 700;
+      color: #0a2540;
     }
 
-    nav a:hover {
-      color: #00ccff; /* Hover color */
+    /* SECTIONS */
+    .container {
+      max-width: 1100px;
+      margin: auto;
+      padding: 60px 20px;
     }
 
-    /* Main Content */
-    main {
+    .section-title {
+      font-size: 32px;
+      font-weight: 800;
+      color: #0a2540;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    /* ABOUT AGENCY */
+    .about {
+      background: #fff;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    .about p {
+      font-size: 17px;
+      line-height: 1.8;
       max-width: 900px;
-      margin: 20px auto;
-      padding: 0 20px;
+      margin: auto;
     }
 
-    h3 {
-      color: #0066cc; /* Section headings color */
+    /* FEATURED POLITICIAN */
+    .featured {
+      margin-top: 60px;
     }
 
-    p {
-      margin-bottom: 15px;
+    .card {
+      display: grid;
+      grid-template-columns: 280px 1fr;
+      gap: 30px;
+      background: #fff;
+      padding: 35px;
+      border-radius: 12px;
+      box-shadow: 0 15px 40px rgba(0,0,0,0.12);
+      align-items: center;
     }
 
-    hr {
-      border: none;
-      border-top: 2px solid #00ccff;
-      margin: 30px 0;
-    }
-
-    /* Politician Card */
-    .politician-container {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
-
-    .politician-card {
-      background-color: white;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      width: 250px;
-      text-align: center;
-      padding: 15px;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .politician-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 5px 20px rgba(0,0,0,0.2);
-    }
-
-    .politician-card img {
+    .card img {
       width: 100%;
-      max-width: 150px;
-      border-radius: 50%;
-      margin-bottom: 10px;
+      border-radius: 10px;
+      border: 4px solid #0a2540;
     }
 
+    .badge {
+      background: #d32f2f;
+      color: #fff;
+      font-weight: 700;
+      display: inline-block;
+      padding: 6px 14px;
+      border-radius: 4px;
+      margin-bottom: 12px;
+    }
+
+    .card h3 {
+      font-size: 28px;
+      font-weight: 800;
+      margin-bottom: 8px;
+      color: #0a2540;
+    }
+
+    .card h4 {
+      font-size: 16px;
+      font-weight: 700;
+      margin-bottom: 12px;
+      color: #444;
+    }
+
+    .card p {
+      font-size: 16px;
+      line-height: 1.7;
+    }
+
+    /* FOOTER */
     footer {
+      background: #000;
+      color: #fff;
       text-align: center;
-      padding: 20px 0;
-      background-color: #333;
-      color: white;
-      margin-top: 40px;
+      padding: 25px;
+      font-size: 14px;
+      margin-top: 70px;
     }
 
-    /* Responsive for Mobile */
-    @media(max-width:600px){
-      .politician-container {
-        flex-direction: column;
-        align-items: center;
+    @media (max-width: 768px) {
+      .card {
+        grid-template-columns: 1fr;
+        text-align: center;
       }
     }
   </style>
 </head>
+
 <body>
 
-  <!-- Header Banner -->
-  <header>
-    <h1>G-Mediatech</h1>
-    <h2>Digital Media & Political Communication</h2>
-  </header>
+<header>
+  <h1>G-Mediatech</h1>
+  <h2>Digital Media & Political Communication</h2>
+</header>
 
-  <!-- Navigation -->
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact</a>
-    <a href="privacy-policy.html">Privacy Policy</a>
-    <a href="terms.html">Terms</a>
-  </nav>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About Us</a>
+  <a href="contact.html">Contact</a>
+  <a href="privacy-policy.html">Privacy Policy</a>
+  <a href="terms.html">Terms</a>
+</nav>
 
-  <!-- Main Content -->
-  <main>
+<div class="container">
+
+  <!-- ABOUT AGENCY -->
+  <section class="about">
+    <h2 class="section-title">About G-Mediatech</h2>
     <p>
-      G-Mediatech is a digital media and political communication agency
-      based in Pune, Maharashtra. We provide social media management, digital
-      advertising, and political communication services.
+      <strong>G-Mediatech</strong> is a digital media and political communication agency
+      based in <strong>Pune, Maharashtra</strong>.
+      We specialize in <strong>social media management, digital advertising,
+      and political communication services</strong>.
     </p>
-
     <p>
       We create, manage, and publish online advertisements including
-      political and social issue ads on platforms such as Facebook and Instagram.
+      <strong>political and social issue campaigns</strong> on platforms such as
+      <strong>Facebook and Instagram</strong>, helping leaders connect directly
+      with the people.
     </p>
+  </section>
 
-    <hr>
+  <!-- FEATURED POLITICIAN -->
+  <section class="featured">
+    <h2 class="section-title">Featured Politician</h2>
 
-    <h3>Featured Politician</h3>
-    <div class="politician-container">
-      <!-- Politician Card -->
-      <div class="politician-card">
-        <img src="images/jevan-chakankar.jpg" alt="Jevan Chakankar">
-        <h4>Jevan Chakankar</h4>
-        <p>Constituency: Pune Central</p>
-        <p>Dedicated to community development, youth engagement, and social welfare initiatives.</p>
+    <div class="card">
+      <img src="images/jevan-chakankar.png" alt="Jevan Chakankar">
+
+      <div>
+        <span class="badge">Political Client</span>
+        <h3>Jevan Chakankar</h3>
+        <h4>Constituency: Pune Central</h4>
+
+        <p>
+          Dedicated to <strong>community development, youth engagement,
+          and social welfare initiatives</strong>, Jevan Chakankar is a
+          people-focused leader committed to inclusive growth and
+          responsible governance.
+        </p>
       </div>
     </div>
-  </main>
+  </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>© 2026 G-Mediatech. All rights reserved.</p>
-  </footer>
+</div>
+
+<footer>
+  © 2026 G-Mediatech. All rights reserved.
+</footer>
 
 </body>
 </html>
