--- a/index.html
+++ b/index.html
@@ -1,153 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>G-Mediatech | Digital Media & Political Communication</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>G-Mediatech | Digital Media & Political Communication</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: "Segoe UI", Arial, sans-serif;
-      background: #f4f6f9;
-      color: #111;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #f2f4f8;
+}
 
-    /* HEADER */
-    header {
-      background: #0a2540;
-      color: #fff;
-      padding: 60px 20px;
-      text-align: center;
-    }
+header {
+  background: #0a2540;
+  color: #fff;
+  padding: 50px 20px;
+  text-align: center;
+}
 
-    header h1 {
-      font-size: 46px;
-      font-weight: 900;
-      letter-spacing: 1px;
-      margin-bottom: 10px;
-    }
+header h1 {
+  font-size: 44px;
+  font-weight: 900;
+}
 
-    header h2 {
-      font-size: 20px;
-      font-weight: 600;
-      opacity: 0.9;
-    }
+header h2 {
+  font-size: 18px;
+  opacity: 0.9;
+}
 
-    /* NAV */
-    nav {
-      background: #fff;
-      padding: 15px;
-      text-align: center;
-      box-shadow: 0 5px 12px rgba(0,0,0,0.1);
-    }
+nav {
+  background: #fff;
+  text-align: center;
+  padding: 15px;
+}
 
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: 700;
-      color: #0a2540;
-    }
+nav a {
+  margin: 0 15px;
+  font-weight: 700;
+  text-decoration: none;
+  color: #0a2540;
+}
 
-    /* SECTIONS */
-    .container {
-      max-width: 1100px;
-      margin: auto;
-      padding: 60px 20px;
-    }
+.container {
+  max-width: 1000px;
+  margin: auto;
+  padding: 50px 20px;
+}
 
-    .section-title {
-      font-size: 32px;
-      font-weight: 800;
-      color: #0a2540;
-      margin-bottom: 20px;
-      text-align: center;
-    }
+.section-title {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 800;
+  margin-bottom: 30px;
+  color: #0a2540;
+}
 
-    /* ABOUT AGENCY */
-    .about {
-      background: #fff;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.1);
-      text-align: center;
-    }
+/* CARD */
+.card {
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+  padding: 25px;
+  display: flex;
+  gap: 25px;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.3s;
+}
 
-    .about p {
-      font-size: 17px;
-      line-height: 1.8;
-      max-width: 900px;
-      margin: auto;
-    }
+.card:hover {
+  transform: translateY(-5px);
+}
 
-    /* FEATURED POLITICIAN */
-    .featured {
-      margin-top: 60px;
-    }
+.card img {
+  width: 180px;
+  border-radius: 10px;
+  border: 3px solid #0a2540;
+}
 
-    .card {
-      display: grid;
-      grid-template-columns: 280px 1fr;
-      gap: 30px;
-      background: #fff;
-      padding: 35px;
-      border-radius: 12px;
-      box-shadow: 0 15px 40px rgba(0,0,0,0.12);
-      align-items: center;
-    }
+.card h3 {
+  font-size: 26px;
+  margin-bottom: 10px;
+  color: #0a2540;
+}
 
-    .card img {
-      width: 100%;
-      border-radius: 10px;
-      border: 4px solid #0a2540;
-    }
+.point {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 6px;
+}
 
-    .badge {
-      background: #d32f2f;
-      color: #fff;
-      font-weight: 700;
-      display: inline-block;
-      padding: 6px 14px;
-      border-radius: 4px;
-      margin-bottom: 12px;
-    }
-
-    .card h3 {
-      font-size: 28px;
-      font-weight: 800;
-      margin-bottom: 8px;
-      color: #0a2540;
-    }
-
-    .card h4 {
-      font-size: 16px;
-      font-weight: 700;
-      margin-bottom: 12px;
-      color: #444;
-    }
-
-    .card p {
-      font-size: 16px;
-      line-height: 1.7;
-    }
-
-    /* FOOTER */
-    footer {
-      background: #000;
-      color: #fff;
-      text-align: center;
-      padding: 25px;
-      font-size: 14px;
-      margin-top: 70px;
-    }
-
-    @media (max-width: 768px) {
-      .card {
-        grid-template-columns: 1fr;
-        text-align: center;
-      }
-    }
-  </style>
+footer {
+  background: #000;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  margin-top: 60px;
+}
+</style>
 </head>
 
 <body>
@@ -159,52 +110,26 @@
 
 <nav>
   <a href="index.html">Home</a>
-  <a href="about.html">About Us</a>
+  <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
-  <a href="privacy-policy.html">Privacy Policy</a>
-  <a href="terms.html">Terms</a>
 </nav>
 
 <div class="container">
+  <h2 class="section-title">Featured Political Client</h2>
 
-  <!-- ABOUT AGENCY -->
-  <section class="about">
-    <h2 class="section-title">About G-Mediatech</h2>
-    <p>
-      <strong>G-Mediatech</strong> is a digital media and political communication agency
-      based in <strong>Pune, Maharashtra</strong>.
-      We specialize in <strong>social media management, digital advertising,
-      and political communication services</strong>.
-    </p>
-    <p>
-      We create, manage, and publish online advertisements including
-      <strong>political and social issue campaigns</strong> on platforms such as
-      <strong>Facebook and Instagram</strong>, helping leaders connect directly
-      with the people.
-    </p>
-  </section>
-
-  <!-- FEATURED POLITICIAN -->
-  <section class="featured">
-    <h2 class="section-title">Featured Politician</h2>
-
+  <!-- CLICKABLE CARD -->
+  <a href="jevan-chakankar.html" style="text-decoration:none;color:inherit;">
     <div class="card">
       <img src="images/jevan-chakankar.png" alt="Jevan Chakankar">
 
       <div>
-        <span class="badge">Political Client</span>
         <h3>Jevan Chakankar</h3>
-        <h4>Constituency: Pune Central</h4>
-
-        <p>
-          Dedicated to <strong>community development, youth engagement,
-          and social welfare initiatives</strong>, Jevan Chakankar is a
-          people-focused leader committed to inclusive growth and
-          responsible governance.
-        </p>
+        <div class="point">Party: Indian National Congress</div>
+        <div class="point">Position: Vice President, OBC Department</div>
+        <div class="point">Location: Pune City</div>
       </div>
     </div>
-  </section>
+  </a>
 
 </div>
 
