--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Contact | G-Mediatech</title>
-</head>
-<body>
-  <h1>Contact Us</h1>
+<meta charset="UTF-8">
+<title>Contact | G-Mediatech</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <p>
-    Address: A-1201 Honeydew, Sutarwadi Pirangut, Pune, Maharashtra – 412115
-  </p>
-  <p>Email: support@g-mediatech.in</p>
-  <p>Phone: +91 77739 34880</p>
+<style>
+body{margin:0;font-family:Arial,sans-serif;background:#f4f6f9}
+header{background:#0a2540;color:#fff;padding:40px 20px;text-align:center}
+nav{background:#fff;padding:15px;text-align:center}
+nav a{margin:0 15px;font-weight:700;color:#0a2540;text-decoration:none}
+.container{max-width:800px;margin:auto;padding:40px 20px}
+.box{background:#fff;padding:30px;border-radius:10px;box-shadow:0 10px 30px rgba(0,0,0,0.1)}
+h1{color:#0a2540}
+p{font-size:17px}
+footer{background:#000;color:#fff;text-align:center;padding:20px;margin-top:50px}
+</style>
+</head>
+
+<body>
+
+<header>
+  <h1>Contact G-Mediatech</h1>
+</header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<div class="container">
+  <div class="box">
+    <p>📍 <b>Address:</b> A-1201 Honeydew, Sutarwadi Pirangut, Pune – 412115</p>
+    <p>📧 <b>Email:</b> support@g-mediatech.in</p>
+    <p>📞 <b>Phone:</b> +91 77739 34880</p>
+  </div>
+</div>
+
+<footer>
+  © 2026 G-Mediatech. All rights reserved.
+</footer>
+
 </body>
 </html>
