--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,19 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Privacy Policy | G-Mediatech</title>
+<meta charset="UTF-8">
+<title>Privacy Policy | G-Mediatech</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body{margin:0;font-family:Arial,sans-serif;background:#f4f6f9}
+header{background:#0a2540;color:#fff;padding:40px 20px;text-align:center}
+.container{max-width:900px;margin:auto;padding:40px 20px}
+.box{background:#fff;padding:30px;border-radius:10px;box-shadow:0 10px 30px rgba(0,0,0,0.1)}
+h1{color:#0a2540}
+p{font-size:17px;line-height:1.8}
+footer{background:#000;color:#fff;text-align:center;padding:20px;margin-top:50px}
+</style>
 </head>
+
 <body>
+
+<header>
   <h1>Privacy Policy</h1>
+</header>
 
-  <p>
-    G-Mediatech respects user privacy. We may use third-party platforms
-    such as Meta (Facebook & Instagram) for advertising and analytics.
-  </p>
+<div class="container">
+  <div class="box">
+    <p>
+      G-Mediatech respects your privacy and is committed to protecting
+      personal information shared with us.
+    </p>
 
-  <p>
-    We do not sell personal data. Information is used only for
-    communication and service purposes.
-  </p>
+    <p>
+      We may use third-party platforms such as
+      <b>Meta (Facebook & Instagram)</b> for advertising, analytics,
+      and campaign performance tracking.
+    </p>
+
+    <p>
+      ✔ We do <b>not sell or misuse personal data</b><br>
+      ✔ Information is used strictly for communication and service delivery
+    </p>
+  </div>
+</div>
+
+<footer>
+  © 2026 G-Mediatech. All rights reserved.
+</footer>
+
 </body>
 </html>
