--- a/jevan-chakankar.html
+++ b/jevan-chakankar.html
@@ -1,109 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Jevan Chakankar | Political Profile</title>
+<title>Jevan Chakankar | G-Mediatech</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #f4f6f9;
-}
-
-header {
-  background: #0a2540;
-  color: #fff;
-  padding: 50px 20px;
-  text-align: center;
-}
-
-.container {
-  max-width: 900px;
-  margin: auto;
-  padding: 50px 20px;
-}
-
-.profile {
-  background: #fff;
-  padding: 40px;
-  border-radius: 12px;
-  box-shadow: 0 15px 40px rgba(0,0,0,0.12);
-  text-align: center;
-}
-
-.profile img {
-  width: 260px;
-  border-radius: 12px;
-  border: 4px solid #0a2540;
-  margin-bottom: 25px;
-}
-
-.profile h1 {
-  font-size: 36px;
-  font-weight: 900;
-  margin-bottom: 10px;
-}
-
-.profile h3 {
-  font-size: 18px;
-  font-weight: 700;
-  color: #444;
-  margin-bottom: 20px;
-}
-
-.profile p {
-  font-size: 17px;
-  line-height: 1.8;
-}
-
-.back {
-  display: inline-block;
-  margin-top: 25px;
-  font-weight: 700;
-  color: #0a2540;
-  text-decoration: none;
-}
+body{margin:0;font-family:Arial,sans-serif;background:#f4f6f9}
+header{background:#0a2540;color:#fff;padding:40px;text-align:center}
+nav{text-align:center;background:#fff;padding:15px}
+nav a{margin:0 15px;font-weight:700;color:#0a2540;text-decoration:none}
+.container{max-width:900px;margin:auto;padding:40px 20px}
+img{width:260px;height:260px;border-radius:50%;display:block;margin:auto;
+border:6px solid #0a2540;object-fit:cover}
+h3{color:#0a2540;margin-top:30px}
+footer{background:#000;color:#fff;text-align:center;padding:20px;margin-top:50px}
 </style>
 </head>
 
 <body>
 
 <header>
-  <h1>Political Profile</h1>
+  <h1>Jevan Chakankar</h1>
+  <h2>Indian National Congress</h2>
 </header>
 
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+</nav>
+
 <div class="container">
-  <div class="profile">
-    <img src="images/jevan-chakankar.png" alt="Jevan Chakankar">
+  <img src="images/jevan-chakankar.jpg">
 
-    <h1>Jevan Chakankar</h1>
-    <h3>
-      Indian National Congress<br>
-      Vice President – OBC Department, Pune City
-    </h3>
+  <h3>Political Profile</h3>
+  <p>
+    In the backdrop of Pune Municipal Corporation General Elections 2026,
+    Jevan Chakankar is the official candidate of the Indian National Congress.
+    He has been actively involved in public service since 2008.
+  </p>
 
-    <p>
-      In the backdrop of the Pune Municipal Corporation General Elections 2026,
-      Jevan Chakankar is the official candidate of the Indian National Congress,
-      a constituent party of the Maha Vikas Aghadi.
-    </p>
-
-    <p>
-      Since joining the Congress party in 2008, he has remained deeply involved
-      in public life, working at the grassroots level for social justice,
-      inclusive development, and people-centric governance.
-    </p>
-
-    <p>
-      His dedication, integrity, and continuous engagement with citizens have
-      earned him trust and respect across Pune city.
-    </p>
-
-    <a class="back" href="index.html">← Back to Home</a>
-  </div>
+  <p>
+    Currently serving as Vice President, OBC Department,
+    Pune City Congress Committee, he works for social justice,
+    inclusive development, and citizen welfare.
+  </p>
 </div>
+
+<footer>
+  © 2026 G-Mediatech
+</footer>
 
 </body>
 </html>
