--- a/index.html
+++ b/index.html
@@ -6,28 +6,102 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#f4f6f9}
-header{background:#0a2540;color:#fff;padding:45px 20px;text-align:center}
-header h1{margin:0;font-size:42px}
-header h2{margin-top:8px;font-size:18px;font-weight:400}
+body{
+  margin:0;
+  font-family:Arial, Helvetica, sans-serif;
+  background:#f4f6f9;
+}
 
-nav{background:#fff;padding:15px;text-align:center;box-shadow:0 5px 15px rgba(0,0,0,.1)}
-nav a{margin:0 15px;font-weight:700;color:#0a2540;text-decoration:none}
+header{
+  background:#0a2540;
+  color:#fff;
+  padding:45px 20px;
+  text-align:center;
+}
 
-.container{max-width:1100px;margin:auto;padding:50px 20px}
+header h1{
+  margin:0;
+  font-size:42px;
+}
 
-.section{background:#fff;padding:35px;border-radius:12px;
-box-shadow:0 10px 25px rgba(0,0,0,.1);margin-bottom:40px}
+header h2{
+  margin-top:8px;
+  font-size:18px;
+  font-weight:400;
+}
 
-.section h3{color:#0a2540;font-size:32px;margin-bottom:15px}
+nav{
+  background:#ffffff;
+  padding:15px;
+  text-align:center;
+  box-shadow:0 5px 15px rgba(0,0,0,.1);
+}
 
-.card{width:280px;margin:auto;text-align:center;border-radius:15px;
-overflow:hidden;box-shadow:0 10px 25px rgba(0,0,0,.15)}
-.card img{width:100%;height:280px;object-fit:cover}
-.card h4{margin:12px 0 5px;color:#0a2540}
-.card p{margin:4px 0;font-size:14px}
+nav a{
+  margin:0 15px;
+  font-weight:700;
+  color:#0a2540;
+  text-decoration:none;
+}
 
-footer{background:#000;color:#fff;text-align:center;padding:20px}
+.container{
+  max-width:1100px;
+  margin:auto;
+  padding:60px 20px;
+  text-align:center;
+}
+
+.section{
+  background:#fff;
+  padding:40px;
+  border-radius:12px;
+  box-shadow:0 10px 25px rgba(0,0,0,.1);
+  margin-bottom:50px;
+}
+
+.section h3{
+  color:#0a2540;
+  font-size:34px;
+  margin-bottom:15px;
+}
+
+.section p{
+  font-size:18px;
+  line-height:1.8;
+}
+
+.card{
+  width:300px;
+  margin:30px auto 0;
+  border-radius:15px;
+  overflow:hidden;
+  box-shadow:0 10px 25px rgba(0,0,0,.15);
+}
+
+.card img{
+  width:100%;
+  height:320px;
+  object-fit:cover;
+  display:block;
+}
+
+.card h4{
+  margin:15px 0 5px;
+  font-size:22px;
+  color:#0a2540;
+}
+
+.card p{
+  margin:5px 0;
+  font-size:15px;
+}
+
+footer{
+  background:#000;
+  color:#fff;
+  text-align:center;
+  padding:22px;
+}
 </style>
 </head>
 
@@ -48,7 +122,7 @@ footer{background:#000;color:#fff;text-align:center;padding:20px}
 
 <div class="container">
 
-  <!-- SHORT AGENCY INFO -->
+  <!-- ABOUT GMEDIATECH -->
   <div class="section">
     <h3>About G-Mediatech</h3>
     <p>
@@ -60,11 +134,11 @@ footer{background:#000;color:#fff;text-align:center;padding:20px}
 
   <!-- FEATURED POLITICIAN -->
   <div class="section">
-    <h3 style="text-align:center;">Featured Politician</h3>
+    <h3>Featured Politician</h3>
 
     <div class="card">
-      <a href="jevan-chakankar.html" style="text-decoration:none;color:inherit">
-        <img src="images/jevan-chakankar.jpg" alt="Jevan Chakankar">
+      <a href="jevan-chakankar.html" style="text-decoration:none;color:inherit;">
+        <img src="images/jevan-chakankar.png" alt="Jevan Chakankar">
         <h4>Jevan Chakankar</h4>
         <p><b>Indian National Congress</b></p>
         <p>OBC Department</p>
