--- a/jevan-chakankar.html
+++ b/jevan-chakankar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
 <title>Jevan Chakankar | G-Mediatech</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -9,10 +10,18 @@ body{margin:0;font-family:Arial,sans-serif;background:#f4f6f9}
 header{background:#0a2540;color:#fff;padding:40px;text-align:center}
 nav{text-align:center;background:#fff;padding:15px}
 nav a{margin:0 15px;font-weight:700;color:#0a2540;text-decoration:none}
-.container{max-width:900px;margin:auto;padding:40px 20px}
-img{width:260px;height:260px;border-radius:50%;display:block;margin:auto;
-border:6px solid #0a2540;object-fit:cover}
+.container{max-width:900px;margin:auto;padding:50px 20px;text-align:center}
+.profile{
+  width:260px;
+  height:260px;
+  border-radius:50%;
+  object-fit:cover;
+  border:6px solid #0a2540;
+  display:block;
+  margin:20px auto;
+}
 h3{color:#0a2540;margin-top:30px}
+p{font-size:17px;line-height:1.9;text-align:justify}
 footer{background:#000;color:#fff;text-align:center;padding:20px;margin-top:50px}
 </style>
 </head>
@@ -30,20 +39,36 @@ footer{background:#000;color:#fff;text-align:center;padding:20px;margin-top:50px
 </nav>
 
 <div class="container">
-  <img src="images/jevan-chakankar.jpg">
 
-  <h3>Political Profile</h3>
+  <img src="images/jevan-chakankar.png" class="profile" alt="Jevan Chakankar">
+
+  <h3>Political Background</h3>
+
   <p>
-    In the backdrop of Pune Municipal Corporation General Elections 2026,
-    Jevan Chakankar is the official candidate of the Indian National Congress.
-    He has been actively involved in public service since 2008.
+    In the backdrop of the Pune Municipal Corporation General Elections 2026,
+    Jivan Chakankar is the official candidate of the Indian National Congress,
+    which is a constituent party of the Maha Vikas Aghadi. He joined the Congress
+    party in 2008 and since then has been actively involved in public life with
+    a strong commitment to social and political service.
   </p>
 
   <p>
-    Currently serving as Vice President, OBC Department,
-    Pune City Congress Committee, he works for social justice,
-    inclusive development, and citizen welfare.
+    Over the years, he has consistently worked at the grassroots level,
+    addressing the concerns of common citizens and striving for social justice,
+    inclusive development, and people-centric governance. His dedication,
+    integrity, and continuous engagement with the public have earned him the
+    trust and respect of the people.
   </p>
+
+  <p>
+    Currently, he serves as the Vice President of the OBC Department,
+    Pune City Congress Committee, where he actively works for the empowerment
+    and rights of the OBC community along with the welfare of all sections of
+    society. With his experience, sincere leadership, and deep connection with
+    the people, Jivan Chakankar stands as a strong, reliable, and capable leader
+    committed to the overall development and progressive future of Pune city.
+  </p>
+
 </div>
 
 <footer>
