--- a/about.html
+++ b/about.html
@@ -2,33 +2,33 @@
 <html>
 <head>
 <title>About | G-Mediatech</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body{margin:0;font-family:Arial;background:#f4f6f9}
-header{background:#0a2540;color:#fff;padding:40px;text-align:center}
+header{background:#020d2a;color:white;padding:50px;text-align:center}
 .container{max-width:900px;margin:auto;padding:40px}
-h3{color:#0a2540}
-footer{background:#000;color:#fff;text-align:center;padding:20px}
+p{font-size:18px;line-height:1.8}
+footer{background:black;color:white;text-align:center;padding:20px}
 </style>
 </head>
 
 <body>
 
 <header>
-  <h1>About G-Mediatech</h1>
+<h1>About G-Mediatech</h1>
 </header>
 
 <div class="container">
-  <p>
-    G-Mediatech is a digital media and political communication agency
-    based in Pune, Maharashtra.
-  </p>
-  <p>
-    We provide social media management, political advertising,
-    campaign strategy, and Meta platform advertising
-    including Facebook and Instagram.
-  </p>
+<p>
+G-Mediatech is a Pune-based political digital agency.
+We provide campaign strategy, political branding,
+social media growth, Meta advertising and public perception management.
+</p>
+
+<p>
+We work exclusively with political leaders, organizations and parties
+to help them build influence and voter trust.
+</p>
 </div>
 
 <footer>© 2026 G-Mediatech</footer>
