--- a/index.html
+++ b/index.html
@@ -1,156 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>G-Mediatech | Digital Media & Political Communication</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<title>G-Mediatech | Political Digital Agency</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body{
-  margin:0;
-  font-family:Arial, Helvetica, sans-serif;
-  background:#f4f6f9;
-}
-
-header{
-  background:#0a2540;
-  color:#fff;
-  padding:45px 20px;
-  text-align:center;
-}
-
-header h1{
-  margin:0;
-  font-size:42px;
-}
-
-header h2{
-  margin-top:8px;
-  font-size:18px;
-  font-weight:400;
-}
-
-nav{
-  background:#ffffff;
-  padding:15px;
-  text-align:center;
-  box-shadow:0 5px 15px rgba(0,0,0,.1);
-}
-
-nav a{
-  margin:0 15px;
-  font-weight:700;
-  color:#0a2540;
-  text-decoration:none;
-}
-
-.container{
-  max-width:1100px;
-  margin:auto;
-  padding:60px 20px;
-  text-align:center;
-}
-
-.section{
-  background:#fff;
-  padding:40px;
-  border-radius:12px;
-  box-shadow:0 10px 25px rgba(0,0,0,.1);
-  margin-bottom:50px;
-}
-
-.section h3{
-  color:#0a2540;
-  font-size:34px;
-  margin-bottom:15px;
-}
-
-.section p{
-  font-size:18px;
-  line-height:1.8;
-}
-
+body{margin:0;font-family:Arial;background:#f4f6f9}
+header{background:#020d2a;color:white;padding:50px;text-align:center}
+nav{background:black;text-align:center;padding:12px}
+nav a{color:white;margin:0 15px;text-decoration:none;font-weight:bold}
+.hero{padding:60px 20px;text-align:center}
+.hero h1{color:#b30000;font-size:40px}
+.hero p{font-size:18px}
 .card{
-  width:300px;
-  margin:30px auto 0;
-  border-radius:15px;
-  overflow:hidden;
-  box-shadow:0 10px 25px rgba(0,0,0,.15);
+width:280px;
+margin:40px auto;
+background:white;
+border-radius:10px;
+box-shadow:0 10px 25px rgba(0,0,0,.2);
+overflow:hidden;
+text-align:center;
 }
-
-.card img{
-  width:100%;
-  height:320px;
-  object-fit:cover;
-  display:block;
-}
-
-.card h4{
-  margin:15px 0 5px;
-  font-size:22px;
-  color:#0a2540;
-}
-
-.card p{
-  margin:5px 0;
-  font-size:15px;
-}
-
-footer{
-  background:#000;
-  color:#fff;
-  text-align:center;
-  padding:22px;
-}
+.card img{width:100%;height:280px;object-fit:cover}
+.card h3{color:#020d2a;margin:15px 0}
+.card p{margin-bottom:20px}
+footer{background:black;color:white;text-align:center;padding:20px}
 </style>
 </head>
 
 <body>
 
 <header>
-  <h1>G-Mediatech</h1>
-  <h2>Digital Media & Political Communication</h2>
+<h1>G-Mediatech</h1>
+<p>Political Media & Digital Campaigns</p>
 </header>
 
 <nav>
-  <a href="index.html">Home</a>
-  <a href="about.html">About Us</a>
-  <a href="contact.html">Contact</a>
-  <a href="privacy-policy.html">Privacy Policy</a>
-  <a href="terms.html">Terms</a>
+<a href="index.html">Home</a>
+<a href="about.html">About</a>
+<a href="contact.html">Contact</a>
 </nav>
 
-<div class="container">
+<div class="hero">
+<h1>India’s Next-Gen Political Branding Agency</h1>
+<p>We build political leaders digitally</p>
 
-  <!-- ABOUT GMEDIATECH -->
-  <div class="section">
-    <h3>About G-Mediatech</h3>
-    <p>
-      G-Mediatech is a Pune-based digital media and political communication agency.
-      We manage political branding, social media presence, and digital campaigns
-      for leaders and organizations.
-    </p>
-  </div>
-
-  <!-- FEATURED POLITICIAN -->
-  <div class="section">
-    <h3>Featured Politician</h3>
-
-    <div class="card">
-      <a href="jevan-chakankar.html" style="text-decoration:none;color:inherit;">
-        <img src="images/jevan-chakankar.png" alt="Jevan Chakankar">
-        <h4>Jevan Chakankar</h4>
-        <p><b>Indian National Congress</b></p>
-        <p>OBC Department</p>
-      </a>
-    </div>
-  </div>
-
+<div class="card">
+<a href="jevan-chakankar.html" style="text-decoration:none;color:black">
+<img src="images/jevan-chakankar.png">
+<h3>Jevan Chakankar</h3>
+<p>Indian National Congress</p>
+</a>
+</div>
 </div>
 
-<footer>
-  © 2026 G-Mediatech. All rights reserved.
-</footer>
-
+<footer>© 2026 G-Mediatech</footer>
 </body>
 </html>
