--- a/jevan-chakankar.html
+++ b/jevan-chakankar.html
@@ -2,77 +2,154 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Jevan Chakankar | G-Mediatech</title>
+<title>Jevan Chakankar | Indian National Congress</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#f4f6f9}
-header{background:#0a2540;color:#fff;padding:40px;text-align:center}
-nav{text-align:center;background:#fff;padding:15px}
-nav a{margin:0 15px;font-weight:700;color:#0a2540;text-decoration:none}
-.container{max-width:900px;margin:auto;padding:50px 20px;text-align:center}
-.profile{
-  width:260px;
-  height:260px;
-  border-radius:50%;
-  object-fit:cover;
-  border:6px solid #0a2540;
-  display:block;
-  margin:20px auto;
+body{
+    margin:0;
+    font-family:Arial, Helvetica, sans-serif;
+    background:#f4f6f9;
 }
-h3{color:#0a2540;margin-top:30px}
-p{font-size:17px;line-height:1.9;text-align:justify}
-footer{background:#000;color:#fff;text-align:center;padding:20px;margin-top:50px}
+header{
+    background:linear-gradient(90deg,#020d2a,#b30000);
+    color:white;
+    padding:60px 20px;
+    text-align:center;
+}
+header h1{
+    margin:0;
+    font-size:42px;
+}
+header p{
+    margin-top:10px;
+    font-size:18px;
+}
+nav{
+    background:black;
+    text-align:center;
+    padding:12px;
+}
+nav a{
+    color:white;
+    margin:0 15px;
+    text-decoration:none;
+    font-weight:bold;
+}
+.container{
+    max-width:1000px;
+    margin:auto;
+    padding:60px 20px;
+}
+.profile-box{
+    text-align:center;
+    margin-bottom:50px;
+}
+.profile-img{
+    width:320px;
+    height:320px;
+    object-fit:cover;
+    border-radius:15px;
+    border:6px solid #020d2a;
+    box-shadow:0 10px 30px rgba(0,0,0,.3);
+}
+.name{
+    margin-top:20px;
+    font-size:32px;
+    color:#020d2a;
+}
+.designation{
+    color:#b30000;
+    font-size:18px;
+    font-weight:bold;
+}
+.bio{
+    background:white;
+    padding:50px;
+    border-radius:15px;
+    box-shadow:0 10px 30px rgba(0,0,0,.15);
+}
+.bio h2{
+    color:#020d2a;
+    margin-bottom:20px;
+    border-left:6px solid #b30000;
+    padding-left:15px;
+}
+.bio p{
+    font-size:18px;
+    line-height:1.9;
+    margin-bottom:20px;
+    text-align:justify;
+}
+footer{
+    background:black;
+    color:white;
+    text-align:center;
+    padding:20px;
+    margin-top:60px;
+}
 </style>
 </head>
 
 <body>
 
 <header>
-  <h1>Jevan Chakankar</h1>
-  <h2>Indian National Congress</h2>
+    <h1>Jevan Chakankar</h1>
+    <p>Indian National Congress • Maha Vikas Aghadi</p>
 </header>
 
 <nav>
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About G-Mediatech</a>
+    <a href="contact.html">Contact</a>
 </nav>
 
 <div class="container">
 
-  <img src="images/jevan-chakankar.png" class="profile" alt="Jevan Chakankar">
+    <!-- PROFILE IMAGE -->
+    <div class="profile-box">
+        <img src="images/jevan-chakankar.png" class="profile-img" alt="Jevan Chakankar">
+        <div class="name">Jevan Chakankar</div>
+        <div class="designation">Vice President – OBC Department, Pune City Congress Committee</div>
+    </div>
 
-  <h3>Political Background</h3>
+    <!-- BIOGRAPHY -->
+    <div class="bio">
+        <h2>Political Background</h2>
 
-  <p>
-    In the backdrop of the Pune Municipal Corporation General Elections 2026,
-    Jivan Chakankar is the official candidate of the Indian National Congress,
-    which is a constituent party of the Maha Vikas Aghadi. He joined the Congress
-    party in 2008 and since then has been actively involved in public life with
-    a strong commitment to social and political service.
-  </p>
+        <p>
+        In the backdrop of the Pune Municipal Corporation General Elections 2026, 
+        Jivan Chakankar is the official candidate of the Indian National Congress, 
+        which is a constituent party of the Maha Vikas Aghadi. He joined the Congress 
+        party in 2008 and since then has been actively involved in public life with a 
+        strong commitment to social and political service.
+        </p>
 
-  <p>
-    Over the years, he has consistently worked at the grassroots level,
-    addressing the concerns of common citizens and striving for social justice,
-    inclusive development, and people-centric governance. His dedication,
-    integrity, and continuous engagement with the public have earned him the
-    trust and respect of the people.
-  </p>
+        <p>
+        Over the years, he has consistently worked at the grassroots level, 
+        addressing the concerns of common citizens and striving for social justice, 
+        inclusive development, and people-centric governance. His dedication, 
+        integrity, and continuous engagement with the public have earned him the 
+        trust and respect of the people.
+        </p>
 
-  <p>
-    Currently, he serves as the Vice President of the OBC Department,
-    Pune City Congress Committee, where he actively works for the empowerment
-    and rights of the OBC community along with the welfare of all sections of
-    society. With his experience, sincere leadership, and deep connection with
-    the people, Jivan Chakankar stands as a strong, reliable, and capable leader
-    committed to the overall development and progressive future of Pune city.
-  </p>
+        <p>
+        Currently, he serves as the Vice President of the OBC Department, 
+        Pune City Congress Committee, where he actively works for the empowerment 
+        and rights of the OBC community along with the welfare of all sections of society.
+        </p>
+
+        <p>
+        With his experience, sincere leadership, and deep connection with the people, 
+        Jevan Chakankar stands as a strong, reliable, and capable leader committed 
+        to the overall development and progressive future of Pune city.
+        </p>
+    </div>
 
 </div>
 
 <footer>
-  © 2026 G-Mediatech
+© 2026 G-Mediatech • Political Media & Digital Strategy
 </footer>
 
 </body>
