--- a/terms.html
+++ b/terms.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
 <title>Terms & Conditions | G-Mediatech</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#f4f6f9}
-header{background:#0a2540;color:#fff;padding:40px 20px;text-align:center}
-.container{max-width:900px;margin:auto;padding:40px 20px}
-.box{background:#fff;padding:30px;border-radius:10px;box-shadow:0 10px 30px rgba(0,0,0,0.1)}
-h1{color:#0a2540}
-p{font-size:17px;line-height:1.8}
-footer{background:#000;color:#fff;text-align:center;padding:20px;margin-top:50px}
+body{margin:0;font-family:Arial;background:#f4f6f9}
+header{background:#020d2a;color:white;padding:50px;text-align:center}
+.container{max-width:900px;margin:auto;padding:50px 20px}
+.box{
+background:white;
+padding:40px;
+border-radius:12px;
+box-shadow:0 10px 25px rgba(0,0,0,.15);
+}
+h2{color:#020d2a;margin-bottom:20px}
+p{font-size:18px;line-height:1.8}
+footer{background:black;color:white;text-align:center;padding:20px}
 </style>
 </head>
 
 <body>
 
 <header>
-  <h1>Terms & Conditions</h1>
+<h1>Terms & Conditions</h1>
 </header>
 
 <div class="container">
-  <div class="box">
-    <p>
-      By accessing and using this website, you agree to comply with the
-      terms and conditions of <b>G-Mediatech</b>.
-    </p>
+<div class="box">
 
-    <p>
-      Our services include digital media management, political communication,
-      advertising strategy, and online campaign execution.
-    </p>
+<h2>Website Usage Terms</h2>
 
-    <p>
-      Unauthorized use of content or misrepresentation of services
-      is strictly prohibited.
-    </p>
-  </div>
+<p>
+By accessing and using this website, you agree to comply with the terms and
+conditions of <b>G-Mediatech</b>.
+</p>
+
+<p>
+Our services include digital media management, political communication,
+advertising strategy, and online campaign execution.
+</p>
+
+<p>
+Unauthorized use of content or misrepresentation of services is strictly
+prohibited.
+</p>
+
+</div>
 </div>
 
 <footer>
-  © 2026 G-Mediatech. All rights reserved.
+© 2026 G-Mediatech. All rights reserved.
 </footer>
 
 </body>
