--- a/contact.html
+++ b/contact.html
@@ -3,29 +3,60 @@
 <head>
 <title>Contact | G-Mediatech</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
-body{margin:0;font-family:Arial;background:#f4f6f9}
-header{background:#b30000;color:white;padding:50px;text-align:center}
-.container{max-width:800px;margin:auto;padding:40px}
-.box{background:white;padding:30px;border-radius:10px;box-shadow:0 10px 20px rgba(0,0,0,.2)}
-footer{background:black;color:white;text-align:center;padding:20px}
+body{
+    margin:0;
+    font-family:Arial, Helvetica, sans-serif;
+    background:#f4f6f9;
+}
+header{
+    background:#020d2a;
+    color:white;
+    padding:50px;
+    text-align:center;
+}
+.container{
+    max-width:800px;
+    margin:auto;
+    padding:50px 20px;
+}
+.box{
+    background:white;
+    padding:40px;
+    border-radius:12px;
+    box-shadow:0 10px 25px rgba(0,0,0,.2);
+}
+p{
+    font-size:18px;
+    line-height:1.8;
+}
+footer{
+    background:black;
+    color:white;
+    text-align:center;
+    padding:20px;
+}
 </style>
 </head>
 
 <body>
 
 <header>
-<h1>Contact G-Mediatech</h1>
+    <h1>Contact G-Mediatech</h1>
 </header>
 
 <div class="container">
-<div class="box">
-<p>📍 Pune, Maharashtra</p>
-<p>📧 support@g-mediatech.in</p>
-<p>📞 +91 77739 34880</p>
-</div>
+    <div class="box">
+        <p>📍 <b>Address:</b> Pune, Maharashtra</p>
+        <p>📧 <b>Email:</b> support@g-mediatech.in</p>
+        <p>📞 <b>Phone:</b> +91 77739 34880</p>
+    </div>
 </div>
 
-<footer>© 2026 G-Mediatech</footer>
+<footer>
+© 2026 G-Mediatech. All rights reserved.
+</footer>
+
 </body>
 </html>
